trying to fix scroll issue on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -234,5 +234,9 @@ i.icon {
     }
 }
 
+.touch {
+  -webkit-overflow-scrolling: touch;
+}
+
 @import 'tabit/styles/util';
 @import 'tabit/styles/flex';
